@@ -1,7 +1,7 @@
 #coding: utf-8
 from setuptools import setup, find_packages
 
-__version__ = '0.2.17'
+__version__ = '0.2.18'
 
 setup(
     name         = "lorm",
